Rename batch check to bulk check

--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -41,11 +41,11 @@
 
                         <div class="dfe-card-container">
                             <div class="def-card">
-                                <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="batch" aria-labelledby="batch-heading batch-description" href="@Url.Action("Batch_Check", "BulkUpload")">
-                                    <span id="batch-heading" class="sr-only">Run a batch check</span>
+                                <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="bulk" aria-labelledby="bulk-heading bulk-description" href="@Url.Action("Bulk_Check", "BulkCheck")">
+                                    <span id="bulk-heading" class="sr-only">Run a batch check</span>
                                     Run a batch check
                                 </a>
-                                <p id="batch-description">Run an eligibility check for multiple parents or guardians.</p>
+                                <p id="bulk-description">Run an eligibility check for multiple parents or guardians.</p>
                             </div>
                         </div>
 
@@ -106,11 +106,11 @@
 
                         <div class="dfe-card-container">
                             <div class="def-card">
-                                <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="batch" aria-labelledby="batch-heading batch-description" href="@Url.Action("Batch_Check", "BulkUpload")">
-                                    <span id="batch-heading" class="sr-only">Run a batch check</span>
+                                <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="bulk" aria-labelledby="bulk-heading bulk-description" href="@Url.Action("Bulk_Check", "BulkCheck")">
+                                    <span id="bulk-heading" class="sr-only">Run a batch check</span>
                                     Run a batch check
                                 </a>
-                                <p id="batch-description">Run an eligibility check for multiple parents or guardians.</p>
+                                <p id="bulk-description">Run an eligibility check for multiple parents or guardians.</p>
                             </div>
                         </div>
 
