--- a/CheckYourEligibility-Admin/Views/Check/Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Loader.cshtml
@@ -5,7 +5,7 @@
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row" id="content" data-type="Loader"> 
+<div class="govuk-grid-row" id="content" data-type="Loader" data-url="@Url.Action("Loader", "Check")"> 
     <div class="govuk-grid-column-full">
         <div class="flex-container">
             <div class="container">
