Refactor to store value of status in TempData[Status} rather than the associated text string.

--- a/CheckYourEligibility-Admin/Views/Check/ApplicationsRegistered.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/ApplicationsRegistered.cshtml
@@ -50,7 +50,14 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
             <h2 class="govuk-heading-m">What to do next</h2>
-            <p> @TempData["Status"]</p>
+            @if (TempData["Status"].Equals("eligible"))
+            {
+                <p>As these children are entitled to free school meals, you’ll now need to add details of their application to your own system before finalising.</p>
+            }
+            else
+            {
+                <p>As these children are not entitled to free school meals you'll need to add details of the appeal to your own system before finalising.</p>
+            }
             <p> Go to <a class="govuk-link">@Html.ActionLink("Finalise applications", "FinaliseApplications", "application")</a> and follow the instructions there. </p>
         </div>
     </div>
