Form url now within appsettings

--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -25,7 +25,7 @@
     <p class="govuk-body">You can either:</p>
     <ul class="govuk-list govuk-list--bullet">
         <li>contact the relevant school to ask them to collect it from the parent or guardian</li>
-        <li>email the Department for Education support desk to request a separate check at ecs.admin@education.gov.uk</li>
+        <li>the <a href="@ViewBag.ContactUsUrl"> for Education support desk</a> to request a separate check</li>
     </ul>
 
     <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
