Parent Date of birht now being displayed within LA Pending Applications page

--- a/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
@@ -34,7 +34,7 @@
                             <th class="govuk-table__header" scope="col">Reference</th>
                             <th class="govuk-table__header" scope="col">Parent / Guardian</th>
                             <th class="govuk-table__header" scope="col">Child</th>
-                            <th class="govuk-table__header" scope="col">Child date of birth</th>
+                            <th class="govuk-table__header" scope="col">Parent date of birth</th>
                             <th class="govuk-table__header" scope="col"> School</th>
                             <th class="govuk-table__header" scope="col">Submission date</th>
                         </tr>
