--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -1,4 +1,5 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
+@inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 <a class="govuk-back-link-nolink"></a>
 
 <div id="content" data-type="Not_Eligible_LA">
@@ -25,7 +26,7 @@
     <p class="govuk-body">You can either:</p>
     <ul class="govuk-list govuk-list--bullet">
         <li>contact the relevant school to ask them to collect it from the parent or guardian</li>
-        <li>the <a href="@ViewBag.ContactUsUrl"> for Education support desk</a> to request a separate check</li>
+        <li>the <a href="@Configuration["ContactUsUrl"]"> for Education support desk</a> to request a separate check</li>
     </ul>
 
     <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
