Update layouts to read parameter from views denoting the required page width and supply that width container to the view. Update pages with width parameter to pass to layout and remove redundant formatting. Some refactoring of formatting for readability.

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
@@ -1,24 +1,17 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<main class="govuk-main-wrapper" id="main-content">
+@{
+    ViewData["Layout"] = "two_thirds";
+}
 
+<p class="govuk-heading-l">Are you sure?</p>
+<p class="govuk-body">Sending this record on to the local authority for review will also prompt them to check the evidence you send them separately. </p>
 
-    <div class="govuk-width-container">
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                <p class="govuk-heading-l">Are you sure?</p>
-                <p class="govuk-body">Sending this record on to the local authority for review will also prompt them to check the evidence you send them separately. </p>
-            </div>
-        </div>
-    </div>
+<div class="govuk-!-padding-bottom-3"></div>
 
-    <div class="govuk-!-padding-bottom-3"></div>
+@Html.ActionLink("Yes, send now", "ApplicationDetailAppealSend", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--primary" })
 
-    @Html.ActionLink("Yes, send now", "ApplicationDetailAppealSend", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--primary" })
+@Html.ActionLink("No, return to record", "ApplicationDetailAppeal", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--secondary" })
 
-    @Html.ActionLink("No, return to record", "ApplicationDetailAppeal", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--secondary" })
-
-    <div class="govuk-!-padding-bottom-3"></div>
-
-</main>
+<div class="govuk-!-padding-bottom-3"></div>
