--- a/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Check Answers";
+    ViewData["Layout"] = "full";
 }
 
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
