--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Provide details of your children";
+    ViewData["Layout"] = "two_thirds";
     var childIndex = TempData["childIndex"] as int?;
 }
 
