--- a/CheckYourEligibility-Admin/Views/Check/Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Loader.cshtml
@@ -1,5 +1,6 @@
 @{
     ViewData["Title"] = "Checking Loader";
+    ViewData["Layout"] = "full";
 }
 
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
