--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Check Details";
+    ViewData["Layout"] = "full";
 }
 
 @model CheckYourEligibility_DfeSignIn.Models.DfeClaims;
