--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Check Details";
+    ViewData["Layout"] = "two_thirds";
 }
 
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
@@ -96,8 +97,6 @@
 
         </fieldset>
     </div>
-
-
 
     <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="ni-number-hint">
