--- a/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewData["Title"] = "Nass Number";
-
+    ViewData["Layout"] = "two_thirds";
     var request = TempData["ParentDetails"] as string;
     var parent = JsonConvert.DeserializeObject<Parent>(request);
 }
