--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
@@ -1,13 +1,15 @@
 ﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" class="govuk-grid-column-full" data-type="Could_Not_Check">
-    <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
-    <p>You need to enter a National Insurance or asylum support reference number in order for the check to take place.</p>
-    <p><a href="https://www.gov.uk/lost-national-insurance-number?">How to find your National Insurance number</a></p>
-    <p>An asylum support reference number can usually be found on letters from the Home Office.</p>
-    <p>If you need more help, please contact your school administrator.</p>
+<div class="govuk-grid-row">
+    <div id="content" class="govuk-grid-column-two-thirds" data-type="Could_Not_Check">
+        <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
+        <p>You need to enter a National Insurance or asylum support reference number in order for the check to take place.</p>
+        <p><a href="https://www.gov.uk/lost-national-insurance-number?">How to find your National Insurance number</a></p>
+        <p>An asylum support reference number can usually be found on letters from the Home Office.</p>
+        <p>If you need more help, please contact your school administrator.</p>
 
 
-    <p><a href="../Check/Enter_Details">Try again</a></p>
+        <p><a href="../Check/Enter_Details">Try again</a></p>
+    </div>
 </div>
