--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
@@ -1,34 +1,35 @@
 ﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" class="govuk-grid-column-full" data-type="Not_Found_Pending">
+<div class="govuk-grid-row">
+    <div id="content" class="govuk-grid-column-two-thirds" data-type="Not_Found_Pending">
 
-    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
-        <div class="govuk-notification-banner__header">
-            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                Check failed
-            </h2>
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+            <div class="govuk-notification-banner__header">
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                    Check failed
+                </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+                <p class="govuk-notification-banner__heading">Universal Credit statements needed to perform the check may not be currently available.</p>
+
+            </div>
         </div>
-        <div class="govuk-notification-banner__content">
-            <p class="govuk-notification-banner__heading">Universal Credit statements needed to perform the check may not be currently available.</p>
 
+        <h1 class="govuk-heading-l">Find your Universal Credit statements</h1>
+        <p>If you have up-to-date Universal Credit statements as supporting evidence, show these to your school’s administrator. </p>
+
+        <div class="govuk-warning-text">
+            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+            <strong class="govuk-warning-text__text">
+                <span class="govuk-visually-hidden">Warning</span>
+                Your annual net earned income must be no higher than £7,400 and any documents you provide must show your income and the date.
+            </strong>
         </div>
+
+        <p>If you are an asylum seeker, check to see what asylum support is available. </p>
+        <h2 class="govuk-heading-m">Further guidance </h2>
+        <p>More in-depth information on supporting evidence can be found in the  <a target="_blank" href="../checker/parent-guidance.html">guidance notes for parents and guardians. </a></p><a target="_blank" href="../checker/parent-guidance.html"></a>
+        <p><a target="_blank" href="../checker/parent-guidance.html"></a><a <a href="~/Check/Enter_Details">Try again</a></p>
     </div>
-
-    <h1 class="govuk-heading-l">Find your Universal Credit statements</h1>
-    <p>If you have up-to-date Universal Credit statements as supporting evidence, show these to your school’s administrator. </p>
-
-    <div class="govuk-warning-text">
-        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-        <strong class="govuk-warning-text__text">
-            <span class="govuk-visually-hidden">Warning</span>
-            Your annual net earned income must be no higher than £7,400 and any documents you provide must show your income and the date.
-        </strong>
-    </div>
-
-    <p>If you are an asylum seeker, check to see what asylum support is available. </p>
-    <h2 class="govuk-heading-m">Further guidance </h2>
-    <p>More in-depth information on supporting evidence can be found in the  <a target="_blank" href="../checker/parent-guidance.html">guidance notes for parents and guardians. </a></p><a target="_blank" href="../checker/parent-guidance.html"></a>
-    <p><a target="_blank" href="../checker/parent-guidance.html"></a><a <a href="~/Check/Enter_Details">Try again</a></p>
-
 </div>
