--- a/CheckYourEligibility-Admin/Views/Application/ApplicationFinaliseConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationFinaliseConfirmation.cshtml
@@ -1,31 +1,18 @@
-﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
+﻿@{
+    ViewData["Layout"] = "two_thirds";
+}
+
+@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-!-padding-bottom-3"></div>
-<main class="govuk-main-wrapper" id="main-content">
+<h1 class="govuk-heading-l">Finalise these applications?</h1>
+<div class="govuk-warning-text">
+    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+    <strong class="govuk-warning-text__text">
+        <span class="govuk-visually-hidden">Warning</span>
+        Applications should only be finalised after you've added the details to your own system.
+    </strong>
+</div>
 
-
-    <div class="govuk-width-container">
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-l">Finalise these applications?</h1>
-                <div class="govuk-warning-text">
-                    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                    <strong class="govuk-warning-text__text">
-                        <span class="govuk-visually-hidden">Warning</span>
-                        Applications should only be finalised after you've added the details to your own system.
-                    </strong>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="govuk-!-padding-bottom-3"></div>
-
-    @Html.ActionLink("Yes, finalise now", "ApplicationFinaliseSend", "application", null, new { @class = "govuk-button govuk-button--primary" })
-
-    @Html.ActionLink("No, return to table", "FinaliseApplications", "application", null, new { @class = "govuk-button govuk-button--secondary" })
-
-    <div class="govuk-!-padding-bottom-3"></div>
-
-</main>
+@Html.ActionLink("Yes, finalise now", "ApplicationFinaliseSend", "application", null, new { @class = "govuk-button govuk-button--primary" })
+@Html.ActionLink("No, return to table", "FinaliseApplications", "application", null, new { @class = "govuk-button govuk-button--secondary" })
