--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
@@ -1,21 +1,21 @@
 ﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<div id="content" data-type="Technical_Error">
+<div class="govuk-grid-row">
+    <div id="content" class="govuk-grid-column-two-thirds" data-type="Technical_Error">
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+            <div class="govuk-notification-banner__header">
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                    Check failed
+                </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+                <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
+                <p>@Html.ActionLink("Try again later", "Enter_Details", "Check"), ensuring you’ve entered the parent or guardian details accurately.</p>
+            </div>
+        </div>
 
-    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
-        <div class="govuk-notification-banner__header">
-            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                Check failed
-            </h2>
-        </div>
-        <div class="govuk-notification-banner__content">
-            <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
-            <p>@Html.ActionLink("Try again later", "Enter_Details", "Check"), ensuring you’ve entered the parent or guardian details accurately.</p>
-        </div>
+        <h1 class="govuk-heading-l">If the check keeps failing</h1>
+        <p>Contact the Department for Education support desk at ecs.admin@education.gov.uk.</p>
     </div>
-
-    <h1 class="govuk-heading-l">If the check keeps failing</h1>
-    <p>Contact the Department for Education support desk at ecs.admin@education.gov.uk.</p>
-
 </div>
