--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Check Answers";
-
+    ViewData["Layout"] = "two_thirds";
     DateTime parentDOB = DateTime.ParseExact(Model.ParentDateOfBirth, "yyyy-MM-dd", CultureInfo.InvariantCulture);
     string formattedParentDOB = parentDOB.ToString("dd/MM/yyyy");
 }
