--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Add details of your children";
+    ViewData["Layout"] = "two_thirds";
     var childIndex = TempData["childIndex"] as int?;
     var validationMessage = TempData["ValidationMessage"] as string;
  }
