--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
@@ -1,21 +1,21 @@
 ﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" class="govuk-grid-column-full" data-type="Not_Found">
+<div class="govuk-grid-row">
+    <div id="content" class="govuk-grid-column-two-thirds" data-type="Not_Found">
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+            <div class="govuk-notification-banner__header">
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                    Check failed
+                </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+                <p class="govuk-notification-banner__heading">The personal information you entered does not match departmental records.</p>
+            </div>
+        </div>
 
-    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">  
-        <div class="govuk-notification-banner__header">
-            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                Check failed
-            </h2>
-        </div>
-        <div class="govuk-notification-banner__content">
-            <p class="govuk-notification-banner__heading">The personal information you entered does not match departmental records.</p>
-        </div>
+        <h1 class="govuk-heading-l">Check your details and try again</h1>
+        <p class="govuk-body"><a href="~/Check/Enter_Details">Try again</a>, ensuring you’ve entered your details accurately.</p>
+        <p class="govuk-body">If the check keeps failing, contact your school administrator.</p>
     </div>
-
-    <h1 class="govuk-heading-l">Check your details and try again</h1>
-    <p class="govuk-body"><a href="~/Check/Enter_Details">Try again</a>, ensuring you’ve entered your details accurately.</p>
-    <p class="govuk-body">If the check keeps failing, contact your school administrator.</p>
-
 </div>
