--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Technical_Error.cshtml
@@ -3,21 +3,22 @@
 @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" class="govuk-grid-column-full" data-type="Technical_Error">
+<div class="govuk-grid-row">
+    <div id="content" class="govuk-grid-column-two-thirds" data-type="Technical_Error">
 
-    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
-        <div class="govuk-notification-banner__header">
-            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                Check failed
-            </h2>
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+            <div class="govuk-notification-banner__header">
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                    Check failed
+                </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+                <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
+                <p><a href="~/Check/Enter_Details">Try again</a>, ensuring you’ve entered your details accurately.</p>
+            </div>
         </div>
-        <div class="govuk-notification-banner__content">
-            <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
-            <p><a href="~/Check/Enter_Details">Try again</a>, ensuring you’ve entered your details accurately.</p>
-        </div>
+
+        <h1 class="govuk-heading-l">If the check keeps failing</h1>
+        <p>Contact your school administrator.</p>
     </div>
-
-    <h1 class="govuk-heading-l">If the check keeps failing</h1>
-    <p>Contact your school administrator.</p>
-
 </div>
