--- a/CheckYourEligibility-Parent/Views/Home/Accessibility.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Accessibility.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Accessibility";
+    ViewData["Layout"] = "two_thirds";
 }
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
