--- a/CheckYourEligibility-Parent/Views/Home/Cookies.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Cookies.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Cookies";
+    ViewData["Layout"] = "two_thirds";
 }
 
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
