Double-check that URN exists before display

--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -98,7 +98,7 @@
                     </p>
                         <input id="school-search-@i"
                                class="noJsRemove govuk-search school-search govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].School.URN"]?.Errors.Count > 0 ? "govuk-input--error" : "")"
-                               value="@(Model.ChildList[i].School != null ? string.Join(", ", new[] { Model.ChildList[i].School.Name, Model.ChildList[i].School.URN, Model.ChildList[i].School.Postcode, Model.ChildList[i].School.LA }) : "")"
+                               value="@(Model.ChildList[i].School != null && !String.IsNullOrEmpty(Model.ChildList[i].School.URN) ? string.Join(", ", new[] { Model.ChildList[i].School.Name, Model.ChildList[i].School.URN, Model.ChildList[i].School.Postcode, Model.ChildList[i].School.LA }) : "")"
                                type="text"
                                autocomplete="off"
                                aria-label="School Search" />
