fix fix fix fix

--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -30,8 +30,7 @@
             <a href="@Configuration["ContactUsUrl"]" class="govuk-link">
                 contact the Department for Education support desk
             </a>
-            or email them at
-            <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to request a separate check.
+            to request a separate check
         </p>
 
 
