--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -27,7 +27,7 @@
         <p class="govuk-body">You can either contact:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li> the relevant school to ask them to collect it from the parent or guardian</li>
-            <li> the <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to request a separate check.</li>
+            <li> the<a href="@Configuration["ContactUsUrl"]" class="govuk-link"> Department for Education support desk </a>to request a separate check</li>
         </ul>
 
         <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
