--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,4 +1,5 @@
 ﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
+    @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <div class="govuk-grid-row">
@@ -24,7 +25,15 @@
 
         @Html.ActionLink("Appeal now", "Enter_Child_Details", "Check", null, new { @class = "govuk-button" })
 
-        <p class="govuk-body">Alternatively, you can contact the Department for Education support desk at <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to request a separate check.</p>
+        <p class="govuk-body">
+            Alternatively, you can
+            <a href="@Configuration["ContactUsUrl"]" class="govuk-link">
+                contact the Department for Education support desk
+            </a>
+            to request a separate check
+        </p>
+
+
 
         <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
     </div>
