Using the model already linked to the cshtml rather than relying on tempData

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
@@ -21,7 +21,7 @@
         </div>
     </div>
 </div>
-@if (TempData["ApplicationStatus"].Equals("EvidenceNeeded")){
+@if (Model.Status.Equals("EvidenceNeeded")){
 <div class="govuk-width-container">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
