Update Privacy Notice content

--- a/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "Privacy policy";
+    ViewData["Title"] = "Privacy Notice";
     ViewData["Layout"] = "two_thirds";
 }
 
@@ -8,8 +8,8 @@
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <h1 class="govuk-heading-l">Privacy Notice</h1>
-<h2 class="govuk-heading-m">Who we are</h2>
 
+<h2 class="govuk-heading-m">Who we are</h2>
 <p>
     This service is run by the Department of Education.
 </p>
@@ -23,12 +23,9 @@
     This privacy policy is relevant to parents and/or guardians using the service, and also to any children you may be
     checking or applying for.
 </p>
-<p>
-    It does not relate to the privacy of users elsewhere in the entitlement checking and applying process where other privacy statements may apply.
-</p>
+
 
 <h2 class="govuk-heading-m">Personal data standards</h2>
-
 <p>
     To lawfully use your personal data, we need to meet one or more conditions in the data protection legislation.
 </p>
@@ -39,8 +36,8 @@
     When you use this service, we will use any personal information you give us for administration and research purposes.
 </p>
 
-<h2 class="govuk-heading-m">What personal data we use</h2>
 
+<h2 class="govuk-heading-m">Personal data we use</h2>
 <p>
     This service will use your
 </p>
@@ -60,12 +57,6 @@
     <li>
         <!--your IP address, and -->details of which version of web browser you use to access the service
     </li>
-    <li>
-        information on how you use our site, based on cookies and page tagging techniques
-    </li>
-    <li>
-        any personal information in questions, queries, feedback or communications you make, including your email address, if you contact our support team
-    </li>
 </ul>
 <p></p>
 <p>
@@ -76,7 +67,7 @@
 </p>
 <ul>
     <li>
-        <a href="https://www.gov.uk/government/publications/privacy-information-children-and-young-people-under-18/privacy-information-children-and-young-people-under-18#using-your-data-to-protect-children-and-young-people">children and young people under 18 </a>
+        <a href="https://www.gov.uk/government/publications/privacy-information-children-and-young-people-under-18/privacy-information-children-and-young-people-under-18">children and young people under 18 </a>
     </li>
     <li>
         <a href="https://www.gov.uk/government/publications/privacy-information-early-years-foundation-stage-to-key-stage-3/privacy-information-early-years-foundation-stage-to-key-stage-3">early years foundation stage to key stage 3</a>
@@ -85,8 +76,9 @@
         <a href="https://www.gov.uk/government/publications/privacy-information-key-stage-4-and-5-and-adult-education/privacy-information-key-stage-4-and-5-and-adult-education">key stage 4 and 5 and adult education </a>
     </li>
 </ul>
-<h2 class="govuk-heading-m">How we use your data</h2>
 
+
+<h2 class="govuk-heading-m">How we use your data</h2>
 <p>
     We will use your personal information to:
 </p>
@@ -100,72 +92,10 @@
     <li>
         send eligibility outcomes to local authorities
     </li>
-    <li>
-        ensure that pupils entitled to free school meals receive them
-    </li>
-    <li>
-        ensure that schools receive additional funding known as pupil premium
-    </li>
-    <li>
-        enable us to identify which pupils are potentially eligible for entitlement to free school meals
-    </li>
-    <li>
-        ensure the protection of public funds
-    </li>
-    <li>
-        prevent and detect fraud
-    </li>
-    <li>
-        send you notifications, service updates and notices
-    </li>
 </ul>
 
 
-<h2 class="govuk-heading-m">How we protect your data</h2>
-
-
-<p>
-    When we process your information, we maintain your information’s confidentiality, integrity and availability;
-</p>
-<ul class="govuk-list--bullet">
-    <li>
-        confidentiality means only authorised users can view access, change, use your information
-    </li>
-    <li>
-        integrity means we ensure your information is correct and accurate
-    </li>
-    <li>
-        availability means we ensure your information is available, in a secure system, when required
-    </li>
-</ul>
-<p>
-    We comply with the  <a class="govuk-link" href="https://www.gov.uk/data-protection">Data Protection Act 2018 </a>to protect your personal information.
-</p>
-<p>
-    We will
-</p>
-<ul class="govuk-list--bullet">
-    <li>
-        tell you why we need the information
-    </li>
-    <li>
-        only ask for what we need
-    </li>
-    <li>
-        make sure no one has access to it who should not
-    </li>
-    <li>
-        only keep the information for as long as we need it
-    </li>
-</ul>
-<p>
-    Our users must comply with Data Protection regulations when handling information and understand how important it is to protect personal and other sensitive information.
-</p>
 <h2 class="govuk-heading-m">How long we keep your data</h2>
-
-<p>
-    We only keep your personal information for as long as we need it. We decide how long to keep your information based on what we need and also what the law says. All data is securely and permanently deleted at the end of the retention period. We call this our retention and disposal schedule.
-</p>
 <p>
     We keep your personal information for 7 years. After this, it will be securely destroyed. This will usually be 7 years after the end of each contract.
 </p> <p>
@@ -189,89 +119,11 @@
     This is under Data Protection Legislation and in compliance with the relevant data processing conditions.
 </p>
 
-<h2 class="govuk-heading-m">Your data protection rights</h2>
-
-
-<p>
-    You have the right to:
-</p>
-<ul class="govuk-list--bullet">
-    <li>
-        ask us for access to information about you that we hold.
-    </li>
-    <li>
-        have your personal data rectified, if it is inaccurate or incomplete
-    </li>
-    <li>
-        request the deletion or removal of personal data where there is no compelling reason for its continued processing
-    </li>
-    <li>
-        restrict our processing of your personal data (for example, permitting its storage but no further processing)
-    </li>
-    <li>
-        object to direct marketing (including profiling) and processing for the purposes of scientific or historical research and statistics
-    </li>
-    <li>
-        not be subject to decisions based purely on automated processing where it produces a legal or similarly significant effect on you
-    </li>
-</ul>
-<h2 class="govuk-heading-m">Asking to see your information</h2>
-
-<p>
-    If you want to see the personal information we hold about you in relation to this service. This is known as a subject access request (SAR).
-</p><p>
-    You can
-</p>
-<p></p>
-<ul>
-    <li>
-        complete the <a href="https://form.education.gov.uk/service/Contact_the_Department_for_Education">subject access request form</a>
-    </li>
-    <li>
-        email our support team to find out which DfE office to contact
-    </li>
-    <li>
-        address your Data Protection request to the <a href="mailto:dataprotection.office@education.gov.uk">data protection officer</a>
-    </li>
-</ul>
-<p>
-    If you want us to delete all the information we hold about you, <a href="mailto:dataprotection.office@education.gov.uk">email our support team</a>. There is no charge for this.
-</p>
-<p>
-    Sometimes we can withhold information, for example to protect national security. You can read more about your rights in relation to personal data at <a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/individual-rights/individual-rights/right-to-be-informed/">Information Comissioners Office</a>.
-</p>
-<h3 class="govuk-heading-m">The right to lodge a complaint</h3>
-<p>
-    If you are unhappy with our use of your personal data, you have the right to raise any concerns with the <a href="https://ico.org.uk/global/contact-us/">Information Commissioner's Office.</a>
-</p>
-<h2 class="govuk-heading-m">Third party integration</h2>
-
-<p>
-    We use third party software to help us improve your experience of the Entitlement checker.
-</p>
-<p>
-    These include:
-</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>
-        <a href="https://learn.microsoft.com/en-us/clarity/setup-and-installation/privacy-disclosure">Microsoft Clarity</a>
-    </li>
-    <li>
-        <a href="https://policies.google.com/technologies/partner-sites">Google analytics</a>
-    </li>
-</ul>
-<p>We will store this information in a way that it cannot be used to identify you. </p>
 
 <h2 class="govuk-heading-m">Last updated</h2>
-
 <p>
     This version was last updated in <b>July 2024.</b>
 </p>
 <p>
     We may need to update this privacy notice, so we recommend you revisit this from time to time.
-</p>
-<h2 class="govuk-heading-m">Further information</h2>
-
-<p>
-    Get more information about the <a href="https://www.gov.uk/government/organisations/department-for-education">Department for Education.</a>
 </p>
