updated incorrect script tags

--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -167,8 +167,10 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script type="module" src="~/js/govuk-frontend.min.js"></script>
     <script src="~/js/dfefrontend.js"></script>
+    
+    
+    <script type="module" src="~/js/javascript-starter.js"></script>
     <script src="~/js/cookie-utils.js"></script>
-    <script src="~/js/javascript-starter.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
