--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -5,7 +5,7 @@
     ViewData["Layout"] = "two_thirds";
 }
 
-<a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
+<a class="govuk-back-link" href="@Url.Action("SchoolList", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 @if (!ViewData.ModelState.IsValid)
