Content updates to privacy policy

--- a/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
@@ -94,36 +94,25 @@
     </li>
 </ul>
 
-
 <h2 class="govuk-heading-m">How long we keep your data</h2>
-<p>
-    We keep your personal information for 7 years. After this, it will be securely destroyed. This will usually be 7 years after the end of each contract.
-</p> <p>
-    This meets legal requirements for the retention of finance data.
+<h3 class="govuk-heading-s">Checks resulting in no eligibility or no claims</h3>
+<p class="govuk-body">
+    We keep your personal information for 7 days, then it will be securely destroyed.
 </p>
-<p>
-    When you finish checking you or your child’s entitlement, we'll
+<h3 class="govuk-heading-s">Checks resulting in claiming free school meals</h3>
+<p class="govuk-body">
+    If you are eligible and your children go on to claim free school meals, we'll keep your personal information for the duration that your children are receiving free school meals and a further 6 years.
 </p>
-<ul class="govuk-list--bullet">
-    <li>
-        delete your personal information (unless you give us permission to pass it onto a school and/or local authority)
-    </li>
-    <li>
-        keep audit records of your user account activity for up to 6 years
-    </li>
-</ul>
-<p>
-    We can lawfully keep personal data processed purely for research and statistical purposes indefinitely.
+<h3 class="govuk-heading-s">Participation in research</h3>
+<p class="govuk-body">
+    We can lawfully keep personal data processed purely for research and statistical purposes for up to 2 years.
 </p>
-<p>
-    This is under Data Protection Legislation and in compliance with the relevant data processing conditions.
-</p>
-
 
 <h2 class="govuk-heading-m">Last updated</h2>
-<p>
-    This version was last updated in <b>July 2024.</b>
+
+<p class="govuk-body">
+    This version was last updated in December 2024.
 </p>
-<p>
+<p class="govuk-body">
     We may need to update this privacy notice, so we recommend you revisit this from time to time.
 </p>
