replace text term 'bulk' with 'batch'

--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
@@ -13,7 +13,7 @@
             <div class="govuk-error-summary__body">
                 <ul class="govuk-list govuk-error-summary__list">
                     <li>
-                        There’s an issue with the file you uploaded. Please try again, making sure any file you upload exactly mirrors the layout of the original bulk check template you downloaded, with no extra or missing columns.
+                        There’s an issue with the file you uploaded. Please try again, making sure any file you upload exactly mirrors the layout of the original batch check template you downloaded, with no extra or missing columns.
                     </li>
                 </ul>
             </div>
