--- a/CheckYourEligibility-Admin/Views/BulkCheck/Bulk_Check.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/Bulk_Check.cshtml
@@ -16,18 +16,18 @@
 }
 
 <form asp-controller="BulkCheck" asp-action="Bulk_Check" method="post" enctype="multipart/form-data">
-    <h1 class="govuk-heading-l">Run a bulk check for multiple parents or guardians</h1>
+    <h1 class="govuk-heading-l">Run a batch check for multiple parents or guardians</h1>
     <p>Upload a template with details of the parents or guardians who applied for free school meals.</p>
-    <h2 class="govuk-heading-m">Running a bulk check</h2>
+    <h2 class="govuk-heading-m">Running a batch check</h2>
     <ol class="govuk-list govuk-list--number">
-        <li>Download the <a href="~/documents/bulkchecktemplate.csv" class="govuk-link">bulk check template</a> (0.11 kb) </li>
+        <li>Download the <a href="~/documents/batchchecktemplate.csv" class="govuk-link">batch check template</a> (0.11 kb) </li>
         <li>Add the details of all parents you need to check, including: Name, Date of birth, National Insurance number or Asylum support reference number.</li>
         <li>Save it as a CSV file.</li>
         <li>Upload the completed template on this page on this page and perform checks.</li>
         <li>You’ll be given a file to download containing results.</li>
     </ol>
     <h2 class="govuk-heading-m">Upload a completed template and run a check</h2>
-    <p>The bulk check template must be fully completed and in CSV format.</p>
+    <p>The batch check template must be fully completed and in CSV format.</p>
     <div class="govuk-form-group @(string.IsNullOrEmpty(errorMessage) ? "" : "govuk-form-group--error")">
         @if (!string.IsNullOrEmpty(errorMessage))
         {
