Move Loader usecase to not include view data

--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
@@ -1,5 +1,3 @@
-@model string
-
 <a class="govuk-back-link-nolink"></a>
 
 <div id="content" data-type="Eligible" class="govuk-grid-row">
@@ -41,7 +39,7 @@
         </details>
 
         <div class="govuk-button-group">
-            <a href="@Model" class="govuk-button govuk-!-margin-top-5">Continue to GOV.UK One Login</a>
+            <a href="/Check/SignIn" class="govuk-button govuk-!-margin-top-5">Continue to GOV.UK One Login</a>
             <a class="govuk-link" href="~/Home/Index"> Return to start now</a>
         </div>
 
