Add postcode and LA to school info on check answers page

--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -120,7 +120,7 @@
                         School
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        @Model.Children.ChildList[i].School.Name
+                        @Model.Children.ChildList[i].School.Name, @Model.Children.ChildList[i].School.Postcode, @Model.Children.ChildList[i].School.LA
                     </dd>
 
                 </div>
